# alice

./: .gitignore  README.md  bookworm.py  pyproject.toml  requirements.txt  test_gutenberg.py
data/: entity_rules.json  literary_themes.json  similar_books.json
data/cache/: 11_lexdiv.json
data/raw/: 12.txt
docs/: entities-explained.html  modules-explained.html  topics-explained.html
documentation/: ARCHITECTURE.md  DESIGN_CHOICES.md  MODULES.md
modules/: cache.py  card.py  cleaner.py  entities.py  gutenberg.py  lexdiv.py  metadata.py  nlp.py  overview.py  similarity.py  summary.py  themes.py  topics.py
utils/: metadata.py  path_config.py
