[project]
name = "alice"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "empath>=0.89",
    "en-core-web-sm",
    "numpy>=2.0,<3",
    "requests>=2.32,<3",
    "scikit-learn>=1.5,<2",
    "spacy>=3.8,<4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
